<resources>
    <string name="app_name">Bahaso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Masuk</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="reset_password">Lupa password ? Tenang... Masukkan email akun kalian agar kami dapat mengirim link untuk mengganti password</string>
    <string name="signup">Daftar</string>
    <string name="logo">Logo</string>
    <string name="Tidak_punya_akun">Tidak punya akun?</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="learning_topic">Topik Pembelajaran</string>
    <string name="lets_learn_java">Ayo belajar bahasa jawa hari ini</string>
    <string name="java_alphabet">Huruf Jawa</string>
    <string name="java_alphabet_sub">Belajar dari Huruf Dulu</string>
    <string name="java_conversation">Percakapan</string>
    <string name="java_conversation_sub">Percakapan sederhana</string>
    <string name="before">Sebelumnya</string>
    <string name="next">Selanjutnya</string>
    <string name="score">SCORE</string>
    <string name="score_name">NARUTO UZUMAKI</string>
    <string name="score_grade">80</string>
    <string name="score_button">Try Again</string>
    <string name="name_profile">Nama Orang</string>
    <string name="email_profile">emailemail@gmail.com</string>
    <string name="tanggal_profile">12 Januari 2001</string>
    <string name="change_name">Ubah Nama</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="exit">Keluar</string>
    <string name="desc_img_profile">User Profile</string>
    <string name="count_question">"%d / %d "</string>
    <string name="done">Selesai</string>
    <string name="translation">Terjemahan</string>
    <string name="take_exam">Ambil Ujian</string>
    <string name="start">Mulai</string>
    <string name="cancel">Batal</string>
    <string name="are_you_sure">Apa anda yakin?</string>
    <string name="take_exam_alert_dialog_message">Ujian akan dimulai setelah Anda klik \"Mulai ujian\"</string>
    <string name="alert__message_cancel_quiz">Jawaban quiz Anda akan terhapus</string>
    <string name="continue_quiz">Lanjut</string>
    <string name="alert_title_cancel_quiz">Batalkan quiz?</string>
    <string name="yes">ya</string>
    <string name="no">tidak</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="leader_board">Leaderboard</string>
    <string name="back_to_prev_screen">kembali ke halaman sebelumnya</string>
    <string name="back">Kembali</string>
</resources>