<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".theory.TheoryFragment">

    <View
        android:id="@+id/bg_topic"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bg_topic_theory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="56dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_topic_theory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:paddingVertical="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@tools:sample/lorem" />

    </androidx.cardview.widget.CardView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/theory_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/bg_topic_theory" />

    <Button
        android:id="@+id/btn_prev_theory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/placeholder_gray"
        android:text="@string/before"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_next_theory"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_next_theory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorAccent"
        android:text="@string/next"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/btn_prev_theory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_prev_theory"
        app:layout_constraintTop_toTopOf="@id/btn_prev_theory" />

    <Button
        android:id="@+id/btn_take_exam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorAccent"
        android:text="@string/take_exam"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/btn_prev_theory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_prev_theory" />

</androidx.constraintlayout.widget.ConstraintLayout>